--- a/layout/_widget/music.ejs
+++ b/layout/_widget/music.ejs
@@ -11,7 +11,7 @@
                    type="<%- theme.music.type%>"
                    id="<%- theme.music.id%>"
                    fixed='<%- theme.music.fixed ? 'true':'false' %>'
-                   autoplay='<%- theme.music.autoplay === 'true' %>'
+                   autoplay='<%- theme.music.autoplay === true %>'
                    theme:='<%- theme.music.theme %>'
                    loop='<%- theme.music.loop %>'
                    order='<%- theme.music.order %>'
