--- a/layout/_partial/bg-cover-content.ejs
+++ b/layout/_partial/bg-cover-content.ejs
@@ -35,7 +35,7 @@
 <script>
     // 每天切换 banner 图.  Switch banner image every day.
     // $('.bg-cover').css('background-image', 'url(<%- theme.jsDelivr.url %>/medias/banner/' + new Date().getDay() + '.jpg)');
-    $('.bg-cover').css('background-image', 'url(<%- theme.jsDelivr.url %>https://raw.githubusercontent.com/JokerLJZ/Image/master/Banner/' + new Date().getDay() + '.jpg)');
+    $('.bg-cover').css('background-image', 'url(<%- theme.jsDelivr.url %>http://qiniu.jokerliu.top/' + new Date().getDay() + '.jpg)');
 </script>
 <% } else { %>
 <script>
